--- a/Workbench_keras.ipynb
+++ b/Workbench_keras.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPK4Ga831RbcwrF0u72+8JT",
+      "authorship_tag": "ABX9TyP79XF9FHbDCR1apRHfNecf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2065,6 +2065,37 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**One of the conclusions** that can be drawn is that the model over-fits. The loss function of the validation set increases beyond a certain point. At this point it would be a good time to stop training."
+      ],
+      "metadata": {
+        "id": "s3wqpnx6MMCU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **WordEmbeddings**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "Wordembeddings are vector representations of words that capture contextual and semantic information, making it easier for computers to process and understand natural language.\n"
+      ],
+      "metadata": {
+        "id": "_0MHTJyjN5lt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4GgSUMrVNUlk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
